Cycles - Render Layer Node connection to File Output Node not possible #56667

Closed
opened 2018-09-03 16:26:37 +02:00 by Marcus Papathoma · 5 comments

System Information
Windows 10 Build 17134
AMD Ryzen Threadripper 1950X 16-Core Processor
Geforce GTX 1080 Ti
Geforce GTX Titan X

Blender Version
Broken: blender-2.80.0-git.41f4d210796
Worked: (optional)

Short description of error
There is no connection between renderlayer node and output node possible if you switch to cycles.

Exact steps for others to reproduce the error
Start Blender
Switch to Compositing Workspace
Klick on "Use nodes"
Switch to render engine Cycles
Add a file output node or in the View Layer Tab switch on Normal Pass in the passes section. - The render layers node looses its output connections.
Switching between the render engines (Eevee, OpenGl, Cycles) sometimes makes the connections appear again but arbitrary.

**System Information** Windows 10 Build 17134 AMD Ryzen Threadripper 1950X 16-Core Processor Geforce GTX 1080 Ti Geforce GTX Titan X **Blender Version** Broken: blender-2.80.0-git.41f4d210796 Worked: (optional) **Short description of error** There is no connection between renderlayer node and output node possible if you switch to cycles. **Exact steps for others to reproduce the error** Start Blender Switch to Compositing Workspace Klick on "Use nodes" Switch to render engine Cycles Add a file output node or in the View Layer Tab switch on Normal Pass in the passes section. - The render layers node looses its output connections. Switching between the render engines (Eevee, OpenGl, Cycles) sometimes makes the connections appear again but arbitrary.

Added subscriber: @machieb

Added subscriber: @machieb

#56685 was marked as duplicate of this issue

#56685 was marked as duplicate of this issue

This issue was referenced by f1f99c4991

This issue was referenced by f1f99c4991ff953447cba3427879923fd261cb26

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @riftaddi

Added subscriber: @riftaddi
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56667
No description provided.