Fix T56667: missing sockets with Cycles render layer nodes in compositing.